# story_builder

./: .env.example  .gitignore  CHANGELOG.md  GUMROAD_UPDATE_0.1.2.md  LICENSE  README.md  RELEASE_NOTES_0.1.2.md  implementation_plan_stabilization.md  minimal_story.dot  minimal_story.json  pyproject.toml  release_gumroad.py  story.dot  story.json  test_output.dot  test_output.json
.github/workflows/: check-branch.yml
.venv_1/: pyvenv.cfg
.venv_1/Scripts/: activate  activate.bat
.venv_demo/: pyvenv.cfg
.venv_demo/Scripts/: activate  activate.bat
.venv_test/: pyvenv.cfg
.venv_test/Scripts/: activate  activate.bat
.venv_test2/: pyvenv.cfg
.venv_test2/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
.venv_verify_pro/: pyvenv.cfg
.venv_verify_pro/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
examples/: advanced_demo.py  ai_generate_demo.py  cyberpunk_detective.dot  cyberpunk_detective.json  fantasy_quest.json  generated_story.dot  generated_story.json  haunted_mansion.json  minimal_story.dot  minimal_story.json  minimal_story.py
pro/: LICENSE_PRO.txt  README.md  README_PRO.md  pyproject.toml
pro/examples/: ai_generate_demo.py
pro/story_builder_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pro/story_builder_pro/ai/: branch_generator.py  prompt_templates.py  provider_openrouter.py
story_builder/: cli.py
story_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
story_builder/ai/: interfaces.py  llm_provider.py
story_builder/core/: conditions.py  executor.py  graph.py  node.py  state.py
tests/: test_ai_safety.py  test_bom_loading.py  test_cli_errors.py  test_cli_generate.py  test_cli_mock.py  test_conditions.py  test_demo_mock.py  test_effects.py  test_executor.py  test_graph_validation.py  test_json_roundtrip.py  test_loop_safety.py  test_packaging_smoke.py  test_pro_generator.py  test_state_sdk.py  test_validate_command.py  test_visualize.py
