[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "story-builder"
version = "0.1.0"
description = "Deterministic State-Driven Interactive Narrative Engine SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
story_builder = "story_builder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["story_builder*"]
