[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "story-builder-sdk"
version = "0.1.2"
description = "Deterministic State-Driven Interactive Narrative Engine SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
ai = ["langchain-openai>=0.1.0"]
viz = ["graphviz>=0.20.0"]

[project.scripts]
story-builder = "story_builder.cli:main"
story_builder = "story_builder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["story_builder*"]
